bin/test/fixtures/public/fail/semantic/extra/undef_function_for_object.jmm
class Undef {
    public static void main(String[] args) {
        int a;
        a.add(2);
    }

    public Undef add(int number) {
        return this;
    }
}